--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "9.1.1"
+    "cypress": "9.5.0",
+    "cypress-real-events": "^1.7.6"
   }
 }
